Bug 429300 - Online sources of an installed kmymoney5 application are not visible in the online quotes editor
Summary: Online sources of an installed kmymoney5 application are not visible in the o...
Status: RESOLVED FIXED
Alias: None
Product: alkimia
Classification: Frameworks and Libraries
Component: General (other bugs)
Version First Reported In: master
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-18 13:00 UTC by Ralf Habacker
Modified: 2020-11-18 13:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 8.0.80
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2020-11-18 13:00:54 UTC
SUMMARY


STEPS TO REPRODUCE
1. download and unpack recent alkimia and kmymoney5 packages from https://binary-factory.kde.rg
2. start kmymoney and open "Online quotes" settings page
3.start online quotes editor from alkimia package
4. select profile 'kmymoney5'

OBSERVED RESULT
The online quotes provided by kmymoney5 are not visible

EXPECTED RESULT
The online quotes provided by kmymoney5 should be visible in onlinequoteseditor

SOFTWARE/OS VERSIONS
Windows: 10
KDE Frameworks Version: 5.75
Qt Version: 5.15.1

ADDITIONAL INFORMATION
Although alkimia's online quote support is not yet integrated into kmymoney5, the online quote editor can be used for improved processing.
Comment 1 Ralf Habacker 2020-11-18 13:39:04 UTC
Git commit d1d0ddce266f3e80f6ec2d736659b68486ee61da by Ralf Habacker.
Committed on 18/11/2020 at 13:38.
Pushed by habacker into branch 'master'.

Fix finding kmymoney5 config file on Windows
FIXED-IN:8.0.80

M  +3    -1    src/alkonlinequotesprofile.cpp

https://invent.kde.org/office/alkimia/commit/d1d0ddce266f3e80f6ec2d736659b68486ee61da