Fix finding kmymoney5 config file on Windows

BUG:429300
FIXED-IN:8.0.80